# Pumas-Rover

./: .gitignore  README.md
ros2_ws/: .gitignore
ros2_ws/src/hardware/diseños/: Cople_base-motorCentral(1).stl  Cople_base-servo.stl  Cople_motor-servo(1).stl
ros2_ws/src/hardware/driver_ws/: .bashrc
ros2_ws/src/hardware/mobile_base/: package.xml  setup.py
ros2_ws/src/hardware/mobile_base/launch/: remote_controller_base.py
ros2_ws/src/hardware/mobile_base/mobile_base/: mobile_base.py  objective_path.py  odometry_listener.py  path_planner.py  remote_control.py  speed_control.py  speed_keyboard.py
ros2_ws/src/hardware/rover_simulador/: .gitignore  package.xml  setup.py
ros2_ws/src/hardware/rover_simulador/launch/: rover_launch.py  rover_launch2.py
ros2_ws/src/hardware/rover_simulador/resource/: my_rover.urdf
ros2_ws/src/hardware/rover_simulador/rover/: camera.py  my_rover_driver.py  rover_ros2.py
ros2_ws/src/hardware/rover_simulador/worlds/: 4_wheeled_robot.wbt
ros2_ws/src/hardware/xarm_depth_tf/: package.xml  setup.cfg  setup.py
ros2_ws/src/hardware/xarm_depth_tf/xarm_depth_tf/: depth_to_base.py
ros2_ws/src/hardware/xarm_depth_yolo/: package.xml  setup.cfg  setup.py
ros2_ws/src/hardware/xarm_depth_yolo/xarm_depth_yolo/: follower.py  transform.py
ros2_ws/src/hardware/yolo_model/: convertir_rocas.py  train_rocas.py
ros2_ws/src/hardware/yolo_realsense/: package.xml  setup.py
ros2_ws/src/hardware/yolo_realsense/yolo_realsense/: nav_vision.py  yolo_id.py  (+2 more)
ros2_ws/src/simulator/gz_rover/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/simulator/gz_rover/config/rviz/: rover.rviz
ros2_ws/src/simulator/gz_rover/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/simulator/gz_rover/urdf/: rover.urdf
ros2_ws/src/simulator/gz_rover/worlds/: empty.world
(+7 files in other folders)
